--- a/index.html
+++ b/index.html
@@ -635,11 +635,155 @@
             <h2>Desktop Wallpaper</h2>
             <div class="wallpapers-grid">
                 <div class="wallpaper">
-                    <img src="sample-desktop.jpg" alt="Sample Desktop Wallpaper">
-                    <a href="sample-desktop.jpg" download="Sample Desktop Wallpaper">
+                    <img src="101.jpg" alt="Sample Desktop Wallpaper">
+                    <a href="101.jpg" download="Sample Desktop Wallpaper">
                         <button class="download">Download</button>
                     </a>
                 </div>
+                 <div class="wallpaper">
+                        <img src="102.jpg" alt="1 Mobile Wallpaper">
+                        <a href="102.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="103.jpg" alt="1 Mobile Wallpaper">
+                        <a href="103.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="104.jpg" alt="1 Mobile Wallpaper">
+                        <a href="104.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="105.jpg" alt="1 Mobile Wallpaper">
+                        <a href="105.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="106.jpg" alt="1 Mobile Wallpaper">
+                        <a href="106.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="107.jpg" alt="1 Mobile Wallpaper">
+                        <a href="107.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="108.jpg" alt="1 Mobile Wallpaper">
+                        <a href="108.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="109.jpg" alt="1 Mobile Wallpaper">
+                        <a href="109.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="110.jpg" alt="1 Mobile Wallpaper">
+                        <a href="110.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="111.jpg" alt="1 Mobile Wallpaper">
+                        <a href="111.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="112.jpg" alt="1 Mobile Wallpaper">
+                        <a href="112.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="113.jpg" alt="1 Mobile Wallpaper">
+                        <a href="113.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="114.jpg" alt="1 Mobile Wallpaper">
+                        <a href="114.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="115.jpg" alt="1 Mobile Wallpaper">
+                        <a href="115.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="116.jpg" alt="1 Mobile Wallpaper">
+                        <a href="116.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="117.jpg" alt="1 Mobile Wallpaper">
+                        <a href="117.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="118.jpg" alt="1 Mobile Wallpaper">
+                        <a href="118.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="119.jpg" alt="1 Mobile Wallpaper">
+                        <a href="119.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="120.jpg" alt="1 Mobile Wallpaper">
+                        <a href="120.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="121.jpg" alt="1 Mobile Wallpaper">
+                        <a href="121.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="122.jpg" alt="1 Mobile Wallpaper">
+                        <a href="122.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="123.jpg" alt="1 Mobile Wallpaper">
+                        <a href="123.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="124.jpg" alt="1 Mobile Wallpaper">
+                        <a href="124.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
+                 <div class="wallpaper">
+                        <img src="125.jpg" alt="1 Mobile Wallpaper">
+                        <a href="125.jpg" download="1 Mobile Wallpaper">
+                            <button class="download">Download</button>
+                        </a>
+                    </div>
             </div>
         </section>
         <section id="reviews">
