--- a/index.html
+++ b/index.html
@@ -792,15 +792,11 @@
             <button class="review-button" onclick="hideReviews()">Hide Reviews</button>
             <div id="review-list"></div>
         </section>
-        <section id="be-part">
-            <h2>Be a Part of Us</h2>
-            <h4>To keep services free</h4>
-            <p>UPI ID: saimrohe2005@oksbi</p>
         </section>
     </main>
     <script src="script.js"></script>
     <footer>
-        <p>All rights reserved &copy; 2024. Website created by Saim Rohe</p>
+        <p>All rights reserved &copy; 2024. Website created by SR Developer</p>
     </footer>
 </body>
 </html>
